--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,15 @@
     "resources/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "1.4.1",
+    "angular-route": "1.4.1",
+    "angular-resource": "1.4.1",
+    "angular-animate": "1.4.1",
+    "angular-messages": "1.4.1",
+    "angular-bootstrap": "0.13.0",
+    "angular-strap": "2.2.4",
+    "bootstrap": "3.3.5"
+  }
 }
