--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   },
   "dependencies": {
     "laravel-elixir": "^2.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "bootstrap-sass": "^3.0.0",
+    "gulp-clean": "~0.3.1",
+    "gulp-livereload": "~3.8.0"
   }
 }
