--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "laravel-elixir": "^2.0.0",
     "bootstrap-sass": "^3.0.0",
-    "gulp-clean": "~0.3.1",
-    "gulp-livereload": "~3.8.0"
+    "gulp-livereload": "~3.8.0",
+    "rimraf": "~2.4.2"
   }
 }
